--- a/code/index.html
+++ b/code/index.html
@@ -3,16 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Moderno</title>
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
 </head>
 <body>
-  <div class="saudacao">
-    <h1>Olá mundo</h1>
-    <h2>Bom dia <span>rapaziadinha</span></h2>
-    <button>Olá mundo</button>
-  </div>
-
-  <h2>Eu to fora da div</h2>
+  <header class="main-header">
+    <h1>Bem-vindo ao CSS Moderno!</h1>
+    <nav class="navigation">
+      <a href="#home">Home</a>
+      <a href="#about">Sobre</a>
+      <a href="#contact">Contato</a>
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <p>Explore as novas funcionalidades do CSS!</p>
+      <button class="cta-button">Saiba Mais</button>
+    </section>
+  </main>
 </body>
 </html>
